--- a/CSS/index.css
+++ b/CSS/index.css
@@ -20,6 +20,7 @@ body {
     position: absolute;
     width: 100%;
     padding: 20px 0;
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,6 +46,7 @@ body {
 .logo {
     font-size: 3.5rem;
     font-weight: 700;
+    margin-top: 1rem;
     margin-bottom: 0.5rem;
     letter-spacing: 2px;
 }
